Multiple small fixes over all notebooks. In particular, remove custom kernel declarations

--- a/notebooks/nb_120_IntroOfflineRL.ipynb
+++ b/notebooks/nb_120_IntroOfflineRL.ipynb
@@ -150,9 +150,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
