--- a/notebooks/nb_150_Imitation_learning_theory.ipynb
+++ b/notebooks/nb_150_Imitation_learning_theory.ipynb
@@ -78,9 +78,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rl-train-v4",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "rl-train-v4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
