--- a/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
+++ b/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
@@ -462,9 +462,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "training_rl_ivan",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "training_rl_ivan"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
