--- a/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
+++ b/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
@@ -344,9 +344,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "training_rl_ivan",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "training_rl_ivan"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
