--- a/notebooks/nb_75_EnvironmentEngineering.ipynb
+++ b/notebooks/nb_75_EnvironmentEngineering.ipynb
@@ -11,7 +11,7 @@
     "# Environments and Feature Engineering\n",
     "\n",
     "As we will discuss later, there is a plethora of reinforcement learning frameworks, with a new library appearing almost each week.\n",
-    "Fortunately, when it comes to environments, one standard is far more common than any other: openAI's gym"
+    "Fortunately, when it comes to environments, one standard is far more common than any other: openAI's gym and its successor, gymnasium"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -88,15 +88,12 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "# rendering envs directly in notebook is recommended only on colab\n",
-    "in_notebook = \"google.colab\" in sys.modules"
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -114,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -166,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -198,13 +195,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mpanchen/.cache/pypoetry/virtualenvs/tfl_training_rl-vFKr2zha-py3.11/lib/python3.11/site-packages/gymnasium/spaces/box.py:130: UserWarning: \u001B[33mWARN: Box bound precision lowered by casting to float32\u001B[0m\n",
+      "  gym.logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.99859995, -0.05289762, -0.69357789,  0.48105028]), {})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "extended_env = AddThetadotSquaredWrapper(env)\n",
     "extended_env.reset()"
@@ -243,20 +259,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AddThetadotSquaredWrapper<TimeLimit<PendulumEnv instance>>>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "extended_env"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -354,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -393,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -411,26 +438,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Base_ThetadotSquared_ThetadotCube<TimeLimit<PendulumEnv instance>>>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enhanced_env"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Box([-1. -1. -8.  0.  0.], [  1.   1.   8.  64. 512.], (5,), float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enhanced_env.observation_space"
    ]
@@ -454,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -504,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -538,7 +587,7 @@
     "    ):\n",
     "        super().__init__(**kwargs)\n",
     "        if reward_metric is None:\n",
-    "            reward_metric = ModularPendulumEnv._default_reward_metric\n",
+    "            reward_metric = self._default_reward_metric\n",
     "        self.reward_metric = reward_metric\n",
     "        if hasattr(reward_metric, \"range\"):\n",
     "            self.reward_metric = reward_metric.range\n",
@@ -587,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -648,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -825,23 +874,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
