--- a/notebooks/nb_131_Minari_Overview.ipynb
+++ b/notebooks/nb_131_Minari_Overview.ipynb
@@ -67,9 +67,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
