--- a/notebooks/nb_140_CollectDataWithMinari.ipynb
+++ b/notebooks/nb_140_CollectDataWithMinari.ipynb
@@ -328,9 +328,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "training_rl_ivan",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "training_rl_ivan"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
