--- a/notebooks/nb_170_Offline_RL_part_II.ipynb
+++ b/notebooks/nb_170_Offline_RL_part_II.ipynb
@@ -220,9 +220,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
