--- a/notebooks/nb_50_IntroRL.ipynb
+++ b/notebooks/nb_50_IntroRL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -14,9 +14,21 @@
      "remove-output",
      "remove-input-nbconv",
      "remove-output-nbconv"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:41:16.500081692Z",
+     "start_time": "2023-11-26T23:41:15.344177128Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%%capture` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import Callable\n",
     "\n",
@@ -25,23 +37,34 @@
     "from IPython.core.display import HTML\n",
     "from celluloid import Camera\n",
     "from dataclasses import dataclass\n",
-    "# Solution\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import gymnasium as gym\n",
-    "\n",
-    "\n",
+    "import gymnasium as gym"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
     "%%capture\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "%load_ext training_rl"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:43:03.513569713Z",
+     "start_time": "2023-11-26T23:43:02.943422281Z"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -51,16 +74,30 @@
     "tags": [
      "remove-input",
      "remove-input-nbconv"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:43:04.526180480Z",
+     "start_time": "2023-11-26T23:43:04.451400708Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<style>/*\nThis file is mainly copy-pasta from rise's examples\nhttps://github.com/damianavila/RISE/blob/master/examples/rise.css\nthat was further customized for appliedAI purposes\n*/\n@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n\n\n/*\nbody {\n    font-family: 'Work Sans', sans-serif !important;\n    text-transform: initial !important;\n    letter-spacing: initial !important;\n    font-weight: 400 !important;\n    line-height: 1.5 !important;\n    text-size-adjust: 100% !important;\n    ‑webkit‑text‑size‑adjust: 100% !important;\n}\n\n\n.reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n    font-size: 1.5rem !important;\n}\n*/\n\n.navbar-default .navbar-nav > li > a {\n    color: #00747b !important;\n}\n\n.filename {\n    font-size: 2.4rem !important;\n    color: #212529 !important;\n    font-weight: 600 !important;\n}\n\n.reveal, .md-slide {\n    color: white !important;\n}\n\nh1, h2 {\n    color: #00747b !important;\n}\n\nh3, h4, h5, h6 {\n    color: #808080 !important;\n}\n\n.reveal p, .reveal ol, .reveal dl, .reveal ul,\ndiv.text_cell_render {\n    color: #212529 !important;\n}\n\n/*copied from stackoverflow, better spacing between list items*/\nli + li {\n  margin-top: 0.2em;\n}\n\nbody.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n    margin-left: 0.1em;\n    margin-top: 0.2em;\n}\n\n.reveal .rendered_html h1:first-child,\n.reveal .rendered_html h2:first-child,\n.reveal .rendered_html h3:first-child,\n.reveal .rendered_html h4:first-child,\n.reveal .rendered_html h5:first-child {\n    margin-top: 0.2em;\n}\n\n/*\n.CodeMirror-lines, .output_text {\n    font-size: 1.5rem !important;\n}\n*/\n\nh1.plan, h2.plan, h3.plan {\n    text-align: center;\n    padding-bottom: 30px;\n}\n\nul.plan>li>span.plan-bold {\n    font-size: 110%;\n    padding: 4px;\n    font-weight: bold;\n    background-color: #eee;\n}\n\nul.plan>li>ul.subplan>li>span.plan-bold {\n    font-weight: bold;\n}\n\n.plan-strike {\n    opacity: 0.4;\n/*    text-decoration: line-through; */\n}\n\ndiv.plan-container {\n    display: grid;\n    grid-template-columns: 50% 50%;\n}\n\n/*\n * this is to void xarray's html output to show the fallback textual representation\n * see also\n   * xarray.md and\n   * https://github.com/damianavila/RISE/issues/594\n */\n.reveal pre.xr-text-repr-fallback {\n    display: none;\n}\n\n#toc-header, .toc-item li {\n    margin: auto !important;\n    color: #808080 !important;\n}\n\n#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n    margin: auto !important;\n    color: #00747b !important;\n}\n\n#toc-wrapper {\n    top: auto !important;\n    bottom: auto !important;\n    margin-top: 2rem !important;\n    color: #00747b !important;\n}\n\n\n#rise-header {\n    margin: 10px;\n    left: 5%;\n}\n\n#rise-footer {\n    margin: 10px;\n    right: 5%;\n}\n\n#rise-backimage {\n    opacity: 0.70;\n}\n\n.reveal img {\n    max-width: 100%;\n}\n\n\n.md-slide.title {\n    position: relative;\n    top: -50%;\n    margin-left: 5%;\n    font-size: 4em !important;\n    line-height: 1.6;\n}\n</style>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -72,7 +109,11 @@
      "remove-output",
      "remove-input-nbconv",
      "remove-output-nbconv"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:43:08.146406647Z",
+     "start_time": "2023-11-26T23:43:05.573993067Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -83,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -93,9 +134,22 @@
     "tags": [
      "remove-input-nbconv",
      "remove-cell"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:43:08.188041370Z",
+     "start_time": "2023-11-26T23:43:08.137284385Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "\n$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n$\\newcommand{\\amax}{{\\text{argmax}}}$\n$\\newcommand{\\P}{{\\mathbb{P}}}$\n$\\newcommand{\\E}{{\\mathbb{E}}}$\n$\\newcommand{\\R}{{\\mathbb{R}}}$\n$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n$\\newcommand{\\N}{{\\mathbb{N}}}$\n$\\newcommand{\\C}{{\\mathbb{C}}}$\n$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
    ]
@@ -124,8 +178,9 @@
     "\n",
     "## Part 1: Introduction\n",
     "\n",
-    "In the last part we saw interaction with environments from a control perspective. \n",
-    "For the next two days, we will view control an environment as a learning perspective.\n",
+    "In the last part, we saw interaction with environments from a control perspective. \n",
+    "For the next two days, we will view the task of controlling an environment from \n",
+    "a _learning perspective_.\n",
     "\n",
     "Before diving into the notation and details of RL, let us shortly contrast the overall approach\n",
     "to supervised (or self-supervised) learning. \n"
@@ -259,13 +314,13 @@
    "metadata": {},
    "source": [
     "The lines get even more blurry when comparing SL to offline RL. In offline RL, there\n",
-    "is no interaction with the environment, hence the crucial part data acquisition \n",
+    "is no interaction with the environment, thus the crucial part data acquisition \n",
     "(called exploration in RL contexts) is missing.\n",
     "\n",
     "While the other differences remain, offline RL *is* a certain kind of supervised \n",
     "learning. Thus, it is no wonder that many standard SL techniques prove useful there.\n",
     "\n",
-    "In recent developments, large foundational models are increased being used for tasks\n",
+    "In recent developments, large foundational models are increasingly being used for tasks\n",
     "that were previously considered to be only solvable through RL, even tackling the\n",
     "difficulties of transfer learning across different environments.\n",
     "\n",
